<resources>
    <string name="app_name">AndroidCafe</string>
    <string name="action_settings">Settings</string>
    <string name="action_contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_status">Status</string>
    <string name="donut">Donuts are glazed and sprinkled with candy</string>
    <string name="droid_desert">Droid Desert</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling</string>
    <string name="froyo">Froyo is premium self-serve frozen yogurt</string>
    <string name="donut_order_message">You ordered a donut</string>
    <string name="ice_cream_order_message">You ordered a ice cream sandwiches</string>
    <string name="froyo_order_message">You ordered a froyo</string>
    <string name="sameday_message">Dikirim pada hari yang sama</string>
    <string name="nextday_message">Dikirm hari besok</string>
    <string name="pickup_message">Dijemput</string>
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>
