<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="latihanintentt.fahmi.id.androidcafe.MainActivity">
    <item android:id="@+id/action_contact"
        android:title="@string/action_contact"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item android:id="@+id/action_order"
        android:title="@string/action_order"
        android:orderInCategory="10"
        android:icon="@drawable/ic_cart"
        app:showAsAction="always"
        android:onClick="onOptionsItemSelected"
        />
    <item android:id="@+id/action_favorites"
        android:title="@string/action_favorites"
        android:orderInCategory="30"
        app:showAsAction="never"
        />
    <item android:id="@+id/action_status"
        android:title="@string/action_status"
        android:orderInCategory="20"
        android:icon="@drawable/ic_status"
        app:showAsAction="always"
        />
</menu>
