<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/droid_desert"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="15dp"
        android:id="@+id/droid_desert"
        />
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_below="@+id/droid_desert"
        android:id="@+id/layout_donut"
        android:onClick="showdonutmess"
        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/donut"
            android:padding="10dp"
            android:id="@+id/donut"
            />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_toRightOf="@id/donut"
            android:text="@string/donut"
            android:id="@+id/donut_desc"
            android:padding="10dp"

            />
    </RelativeLayout>
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_below="@id/layout_donut"
        android:id="@+id/layout_froyo"
        android:onClick="showfroyomess"

        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/froyo"
            android:padding="10dp"
            android:id="@+id/froyo"
            />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_toRightOf="@id/froyo"
            android:text="@string/froyo"
            android:id="@+id/froyo_desc"
            android:padding="10dp"
            />
    </RelativeLayout>
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content"
        android:layout_below="@id/layout_froyo"
        android:id="@+id/layout_ice_cream"
        android:onClick="showicecreammess"

        >
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ice_cream"
            android:padding="10dp"
            android:id="@+id/ice_cream"
            />
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_toRightOf="@id/ice_cream"
            android:text="@string/froyo"
            android:id="@+id/ice_cream_desc"
            android:padding="10dp"
            />
    </RelativeLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Alert"
        android:id="@+id/btn_test_alert"
        android:layout_below="@id/layout_ice_cream"
        android:layout_margin="20dp"
        android:layout_centerHorizontal="true"
        android:onClick="halamanalert"
        />

</RelativeLayout>