<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent"

    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/text_order"
        android:text="Test"
        android:textSize="12dp"
        android:padding="5dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_nama"
        android:layout_below="@id/text_order"
        android:orientation="horizontal"
        android:padding="10dp"
        >
        <TextView
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="Nama"
            android:layout_marginRight="5dp"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_nama"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_alamat"
        android:layout_below="@id/layout_nama"
        android:orientation="horizontal"
        android:padding="10dp"
        >
        <TextView
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="Alamat"
            android:layout_marginRight="5dp"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_alamat"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_telp"
        android:layout_below="@id/layout_alamat"
        android:orientation="horizontal"
        android:padding="10dp"
        >
        <TextView
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="Telepon"
            android:layout_marginRight="5dp"/>
        <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_telp"/>
        <Spinner android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/label_spinner"
            ></Spinner>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_note"
        android:layout_below="@id/layout_telp"
        android:orientation="horizontal"
        android:padding="10dp"
        >
        <TextView
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:text="Note"
            android:layout_marginRight="5dp"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_note"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_note"
        android:id="@+id/text_metode"
        android:text="Pilih Metode Delivery"
        android:layout_margin="10dp"
        />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_metode"
        android:orientation="vertical"
        android:id="@+id/radio_metode"

        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sameday"
            android:onClick="onRadioButtonClicked"
            android:text="@string/sameday_message"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nextday"
            android:onClick="onRadioButtonClicked"
            android:text="@string/nextday_message"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pickup"
            android:onClick="onRadioButtonClicked"
            android:text="@string/pickup_message"/>
    </RadioGroup>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:text="Next"
        android:id="@+id/btn_next"
        android:onClick="halamanlain"
        />
</RelativeLayout>